--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "electron-metamask-boilerplate",
+  "productName": "Electron Metamask Boilerplate",
   "version": "0.0.1",
   "description": "Easily create a desktop version of your dApp using Electron (Muon) + MetaMask.",
-  "main": "setup.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SwapyNetwork/electron-metamask-boilerplate.git"
+  "main": "main.js",
+  "license": "Apache-2.0",
+  "author": {
+    "name": "Swapy Network",
+    "email": "contact@swapy.network"
   },
   "keywords": [
     "muon",
@@ -20,10 +19,70 @@
     "desktop",
     "app"
   ],
-  "author": "Swapy Network",
-  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/SwapyNetwork/electron-metamask-boilerplate/issues"
   },
-  "homepage": "https://github.com/SwapyNetwork/electron-metamask-boilerplate#readme"
+  "homepage": "https://github.com/SwapyNetwork/electron-metamask-boilerplate#readme",
+  "scripts": {
+    "start": "node setup.js",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "copy.metamask.prod": "cp -R extensions app/dist && cp extensions.js app/dist && cp main.js app/dist",
+    "download.metamask.dev": "mkdir -p extensions && rm -rf extensions/* && cd extensions && ced nkbihfbeogaeaoehlefnkodbefgpgknn && mv nkbihfbeogaeaoehlefnkodbefgpgknn metamask",
+    "download.metamask.prod": "mkdir -p app/dist/extensions && rm -rf app/dist/extensions/* && cd app/dist/extensions && ced nkbihfbeogaeaoehlefnkodbefgpgknn && mv nkbihfbeogaeaoehlefnkodbefgpgknn metamask",
+    "build": "npm run download.metamask.prod && npm run copy.metamask.prod && yarn dist",
+    "build.linux": "npm run download.metamask.prod && npm run copy.metamask.prod && yarn dist -l",
+    "build.win": "npm run download.metamask.prod && npm run copy.metamask.prod && yarn dist -w",
+    "build.mac": "npm run download.metamask.prod && npm run copy.metamask.prod && yarn dist -m",
+    "build.all": "npm run download.metamask.prod && npm run copy.metamask.prod && yarn dist -wlm",
+    "postinstall": "npm i --save-dev brave/electron-prebuilt"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SwapyNetwork/electron-metamask-boilerplate.git"
+  },
+  "build": {
+    "appId": "swapy-exchange-alpha",
+    "productName": "Swapy Exchange Alpha",
+    "muonVersion": "4.7.1",
+    "files": [
+      "dist/**/*",
+      "!node_modules"
+    ],
+    "asar": true,
+    "asarUnpack": [
+      "dist/extensions/"
+    ],
+    "directories": {
+      "buildResources": "app/dist/assets/icons",
+      "output": "dist",
+      "app": "app"
+    },
+    "nodeGypRebuild": false,
+    "linux": {
+      "target": [
+        "deb",
+        "AppImage"
+      ],
+      "icon": "app/dist/assets/icons",
+      "category": "Office"
+    },
+    "mac": {
+      "category": "public.app-category.finance",
+      "target": "default",
+      "icon": "app/dist/assets/icons/swapy-exchange"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "app/dist/assets/icons/swapy-exchange.ico"
+    }
+  },
+  "devDependencies": {
+    "chrome-ext-downloader": "^1.0.3",
+    "electron-builder": "^19.52.1",
+    "electron-is-dev": "^0.3.0",
+    "electron-prebuilt": "github:brave/electron-prebuilt",
+    "electron-reload": "^1.2.2",
+    "yarn": "^1.3.2"
+  }
 }
