--- a/package.json
+++ b/package.json
@@ -84,5 +84,8 @@
     "electron-prebuilt": "github:brave/electron-prebuilt",
     "electron-reload": "^1.2.2",
     "yarn": "^1.3.2"
+  },
+  "dependencies": {
+    "qs": "^6.5.1"
   }
 }
